--- a/Star Wars X-Wing QA Testing/Star Wars X-Wing QA Testing/Star Wars X-Wing QA Testing.csproj
+++ b/Star Wars X-Wing QA Testing/Star Wars X-Wing QA Testing/Star Wars X-Wing QA Testing.csproj
@@ -61,7 +61,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="FreeplayTeamCreationUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
