added integration testing and utility function pages

--- a/Star Wars X-Wing QA Testing/Star Wars X-Wing QA Testing/Star Wars X-Wing QA Testing.csproj
+++ b/Star Wars X-Wing QA Testing/Star Wars X-Wing QA Testing/Star Wars X-Wing QA Testing.csproj
@@ -61,8 +61,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FreeplayIntegrationTests.cs" />
     <Compile Include="FreeplayTeamCreationUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UtilityFunctions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
