--- a/Star Wars X-Wing QA Testing/Star Wars X-Wing QA Testing/Star Wars X-Wing QA Testing.csproj
+++ b/Star Wars X-Wing QA Testing/Star Wars X-Wing QA Testing/Star Wars X-Wing QA Testing.csproj
@@ -61,13 +61,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FreeplayIntegrationTests.cs" />
-    <Compile Include="FreeplayTeamCreationUnitTests.cs" />
+    <Compile Include="Integration Testing\FreeplayIntegrationTests.cs" />
+    <Compile Include="Unit Testing\FreeplayTeamCreationUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UtilityFunctions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="System Testing\" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
